test/Fail/Issue1445-2.err
Issue1445-2.agda:26.15-16: error: [RewriteAmbiguousRules]
Global confluence check failed: block unit false can be rewritten
to either true or false.
Possible fix: add a rewrite rule with left-hand side
block unit false to resolve the ambiguity.
when checking confluence of the rewrite rule r with
Issue1445-2.block-clause1
